<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#aaaaff">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="#000000"
                android:text="@string/strike_text"/>

            <TextView
                android:id="@+id/strike_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="5sp"
                android:textColor="#000000" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="10dp"
                android:textColor="#000000"
                android:text="@string/ball_text"/>

            <TextView
                android:id="@+id/ball_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="5sp"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/strike_button"
        android:layout_height="50dp"
        android:layout_width="350dp"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textColor="#0000ff"
        android:text="@string/strike_button_label" />

    <Button
        android:id="@+id/ball_button"
        android:layout_height="50dp"
        android:layout_width="350dp"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textColor="#0000ff"
        android:text="@string/ball_button_label"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="5sp"
            android:text="@string/outs_label"/>

        <TextView
            android:id="@+id/out_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="5sp"
            android:text="@string/outs_count"/>

    </LinearLayout>
</LinearLayout>